--- a/Inkscape/Inkscapes nybörjarguide/installing-on-windows.po
+++ b/Inkscape/Inkscapes nybörjarguide/installing-on-windows.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:33+0200\n"
+"PO-Revision-Date: 2025-09-01 14:47+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -187,7 +187,7 @@ msgid ""
 "Once you click :guilabel:`Install` in the following screen, a progress bar "
 "will appear showing the different components being installed."
 msgstr ""
-"När du klickar på :guilabel:`Install` på följande skärm visas en "
+"När du klickar på :guilabel:`Installera` på följande skärm visas en "
 "förloppsindikator som visar de olika komponenterna som installeras."
 
 #: ../../source/installing-on-windows.rst:90 25fe71c5698743f2a4005dbe44d4e393
@@ -379,7 +379,7 @@ msgstr ""
 
 #: ../../source/installing-on-windows.rst:215 e5b3c087da5643f0906b69a62fce3490
 msgid "Method 1: Using Keyboard Shortcuts"
-msgstr "Metod 1: Använda kortkommandon på tangentbordet"
+msgstr "Metod 1: Använda tangentbordsgenvägar"
 
 #: ../../source/installing-on-windows.rst:217 e9fe24cf935a44d3a3d731f07a224724
 msgid "Press :kbd:`Win` + :kbd:`R` to open the Windows Run dialog."
