--- a/Inkscape/Inkscapes nybörjarguide/why-use-inkscape.po
+++ b/Inkscape/Inkscapes nybörjarguide/why-use-inkscape.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:17+0200\n"
+"PO-Revision-Date: 2025-09-01 14:56+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -46,8 +46,8 @@ msgstr ""
 "som du vanligtvis stöter på. Vanliga exempel är JPG, PNG, GIF, TIFF eller "
 "BMP. Rasterbilder är standardutmatningen från allt från digitalkameror till "
 "de flesta grafiska redigeringsprogram som Paint eller Paintbrush. De består "
-"av :term:`pixlar <Pixel>`, det vill säga ett rutnät av färgade rektangulära "
-"prickar."
+"av :term:`bildpunkter <Pixel>`, det vill säga ett rutnät av färgade "
+"rektangulära prickar."
 
 #: ../../source/why-use-inkscape.rst:11 e4d49394d1b74966904b1803ce3982eb
 msgid ""
@@ -55,9 +55,9 @@ msgid ""
 "in a small area) you can have very fine control over color and shape; raster "
 "images can contain millions of colors and look very realistic."
 msgstr ""
-"Fördelen med rastergrafik är att man vid hög upplösning (många pixlar på en "
-"liten yta) kan ha mycket fin kontroll över färg och form; rasterbilder kan "
-"innehålla miljontals färger och se mycket realistiska ut."
+"Fördelen med rastergrafik är att man vid hög upplösning (många bildpunkter "
+"på en liten yta) kan ha mycket fin kontroll över färg och form; rasterbilder "
+"kan innehålla miljontals färger och se mycket realistiska ut."
 
 #: ../../source/why-use-inkscape.rst:13 06c0d96f2006421b84a5c604be00d77f
 msgid ""
@@ -163,11 +163,11 @@ msgid ""
 "People use it for fun projects, such as map-making, creating birthday cards, "
 "painting on eggs, 2D game graphics and for **many, many more purposes**."
 msgstr ""
-"Det är också ett bra val för att rita korta serier, göra konst, bygga "
-"mockups för användargränssnitt och göra eller redigera diagram som skapats "
-"av annan programvara. Folk använder det för roliga projekt, som att göra "
-"kartor, skapa födelsedagskort, måla på ägg, 2D-spelgrafik och för **många, "
-"många fler ändamål**."
+"Det är också ett bra val för att rita korta serieteckningar, göra konst, "
+"bygga mockups för användargränssnitt och göra eller redigera diagram som "
+"skapats av annan programvara. Folk använder det för roliga projekt, som att "
+"göra kartor, skapa födelsedagskort, måla på ägg, 2D-spelgrafik och för "
+"**många, många fler ändamål**."
 
 #: ../../source/why-use-inkscape.rst:38 e72f9d5a23244a0b806db5e195c9f9fb
 msgid ""
@@ -188,7 +188,7 @@ msgid ""
 "**Desktop publishing** (multi-page documents, printing in CMYK color space): "
 "`Scribus <https://scribus.net>`_"
 msgstr ""
-"**Desktoppublicering** (flersidiga dokument, utskrift i CMYK-färgrymd): "
+"**Datorstödd layout** (flersidiga dokument, utskrift i CMYK-färgrymd): "
 "`Scribus <https://scribus.net>`_"
 
 #: ../../source/why-use-inkscape.rst:44 63e800b5e71e47c089e355c268618abc
