--- a/Inkscape/Inkscapes nybörjarguide/circles-ellipses-and-arcs.po
+++ b/Inkscape/Inkscapes nybörjarguide/circles-ellipses-and-arcs.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:08+0200\n"
+"PO-Revision-Date: 2025-09-01 14:50+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -59,8 +59,8 @@ msgid ""
 "always keeping the mouse pointer on the inside of the (imaginary) circle."
 msgstr ""
 "Med ellipsverktyget kan du också rita bågar och cirkelsegment (eller "
-"\"pajkilar\"). För att rita en båge, ta tag i det runda handtaget och "
-"dra det, håll alltid muspekaren på insidan av den (imaginära) cirkeln."
+"\"pajbitar”). För att rita en båge, ta tag i det runda handtaget och dra "
+"det, håll alltid muspekaren på insidan av den (imaginära) cirkeln."
 
 #: ../../source/circles-ellipses-and-arcs.rst:17
 #: 4d568f99aef3411cbea307935639e381
@@ -68,7 +68,7 @@ msgid ""
 "To draw a segment (\"pie wedge\"), drag the round handle, always keeping "
 "the mouse pointer on the outside of the (imaginary) circle."
 msgstr ""
-"För att rita ett segment (\"pajkil\") drar du i det runda handtaget och "
+"För att rita ett segment (\"pajbit”) drar du i det runda handtaget och "
 "håller muspekaren alltid på utsidan av den (imaginära) cirkeln."
 
 #: ../../source/circles-ellipses-and-arcs.rst:20
@@ -110,13 +110,13 @@ msgid ""
 "imaginary circle) as you drag the handle."
 msgstr ""
 "De runda handtagen omvandlar formen till en båge eller ett segment "
-"(\"pie wedge\"), beroende på musens position (inom eller utanför den "
+"(\"pajbit”), beroende på musens position (inom eller utanför den "
 "imaginära cirkeln) när du drar i handtaget."
 
 #: ../../source/circles-ellipses-and-arcs.rst:39
 #: 1c5440ba702e4898b1f1ea7a5d9d1c7a
 msgid "Ellipse Tool: Using the tool controls"
-msgstr "Ellipsverktyget: Använda verktygets kontroller"
+msgstr "Ellipsverktyget: Använda verktygskontroller"
 
 #: ../../source/circles-ellipses-and-arcs.rst:43
 #: e0794261d54d4b81a0c92c50f9008e0c
@@ -180,7 +180,7 @@ msgid ""
 "change the size of the ellipse in vertical and horizontal direction, "
 "respectively."
 msgstr ""
-"Om du vill omvandla en ellips till en perfekt cirkel klickar du på ett "
+"Om du vill konvertera en ellips till en perfekt cirkel klickar du på ett "
 "av de fyrkantiga handtagen samtidigt som du trycker på :kbd:`Ctrl`. De "
 "övre och vänstra fyrkantiga handtagen ändrar ellipsens storlek i "
 "vertikal respektive horisontell riktning."
