--- a/Inkscape/Inkscapes nybörjarguide/calligraphy-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/calligraphy-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 16:24+0200\n"
+"PO-Revision-Date: 2025-09-01 17:36+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../source/calligraphy-tool.rst:3 211dab8181e34de58cbd4a260d27ee27
 msgid "The Calligraphy Tool"
-msgstr "Verktyget för kalligrafi"
+msgstr "Kalligrafiverktyget"
 
 #: ../../source/calligraphy-tool.rst:5 ea15c91f565a4dc4a293ff6f31b9fc16
 msgid "|Large Icon for Calligraphy Tool| :kbd:`Ctrl` + :kbd:`F6` or :kbd:`C`"
@@ -40,9 +40,9 @@ msgid ""
 "with one hand on the graphics tablet and the other one on the keyboard, which "
 "moves the canvas, so one can write without interruption."
 msgstr ""
-"Det som en gåspennan var förr i tiden är Inkscapes kalligrafiverktyg i den "
-"digitala världen. Helst ska det användas med en grafikplatta och en penna, med "
-"en hand på grafikplattan och den andra på tangentbordet, som flyttar duken, så "
+"Det som en gåspenna var förr i tiden är Inkscapes kalligrafiverktyg i den "
+"digitala världen. Helst ska det användas med en ritplatta och en styluspenna, "
+"med en hand på ritplattan och den andra på tangentbordet, som flyttar duken, så "
 "att man kan skriva utan avbrott."
 
 #: ../../source/calligraphy-tool.rst:12 90617bc0d04645089df36bb399e3da44
@@ -59,7 +59,7 @@ msgstr ""
 
 #: ../../source/calligraphy-tool.rst:19 3f5ef9ef76404ebbbf24083e4a871fc1
 msgid "Dip Pen"
-msgstr "Bläckpenna"
+msgstr "Doppenna"
 
 #: ../../source/calligraphy-tool.rst:20 1985b2ed3047469f89ae9e092803c410
 msgid "Emulates a bevelled pen tip."
@@ -67,7 +67,7 @@ msgstr "Efterliknar en avfasad pennspets."
 
 #: ../../source/calligraphy-tool.rst:22 439c687148fd46fa9492b9430ea97029
 msgid "Marker"
-msgstr "Markör"
+msgstr "Spritpenna"
 
 #: ../../source/calligraphy-tool.rst:23 497e721622794d74966b9a21509dea49
 msgid "Emulates a round and regular tip."
@@ -83,7 +83,7 @@ msgstr "Emulerar en mjuk, tunn ellips."
 
 #: ../../source/calligraphy-tool.rst:28 e7d47fd8cbfd4073963a607c264b9f32
 msgid "Wiggly"
-msgstr "Wiggly"
+msgstr "Vågig"
 
 #: ../../source/calligraphy-tool.rst:29 aeb53135363f4f47ba6c2992401ed180
 msgid "Emulates a very jumpy round brush."
@@ -91,15 +91,15 @@ msgstr "Emulerar en mycket ryckig rund pensel."
 
 #: ../../source/calligraphy-tool.rst:31 308ae1463eca44b896a1188f61cd1888
 msgid "Splotchy"
-msgstr "Fläckig"
+msgstr "Kladdig"
 
 #: ../../source/calligraphy-tool.rst:32 964d818043b94ea0888acd33fc0b3b48
 msgid "Emulates a quill."
-msgstr "Imiterar en fjäderpenna."
+msgstr "Imiterar en gåspenna."
 
 #: ../../source/calligraphy-tool.rst:34 6f3b57b97bec44c3b08d050961317d11
 msgid "Tracing"
-msgstr "Spårning"
+msgstr "Kalkering"
 
 #: ../../source/calligraphy-tool.rst:35 2793277044eb4186877c8ebd59ac6fd2
 msgid ""
@@ -111,29 +111,29 @@ msgstr ""
 
 #: ../../source/calligraphy-tool.rst:38 bbeb81ca1b5044ae910ab996cc177783
 msgid "Dip Pen setting of Calligraphy Tool"
-msgstr "Bläckpenna-inställning för kalligrafiverktyg"
+msgstr "Doppenna-inställning för kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:42 cfbdbb46f18a49438620941c01689ab3
 msgid "The ends of a line drawn with the :guilabel:`Dip Pen` setting are cusped."
 msgstr ""
-"Ändarna på en linje som ritats med inställningen :guilabel:`Bläckpenna` är "
+"Ändarna på en linje som ritats med inställningen :guilabel:`Doppenna` är "
 "spetsiga."
 
 #: ../../source/calligraphy-tool.rst:44 b57e86d47fa740e88da3420416f663fe
 msgid "Marker setting of Calligraphy Tool"
-msgstr "Markörinställning av kalligrafiverktyg"
+msgstr "Spritpenna-inställning av kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:48 4e108cbaacb249f4ab8172e5341d337c
 msgid ""
 "With the :guilabel:`Marker` setting, the paths look smooth and their ends are "
 "rounded."
 msgstr ""
-"Med inställningen :guilabel:`Markör` ser slingorna släta ut och ändarna är "
+"Med inställningen :guilabel:`Spritpenna` ser slingorna släta ut och ändarna är "
 "rundade."
 
 #: ../../source/calligraphy-tool.rst:51 3ba218b2c8414f93a2b300c11623babd
 msgid "Brush setting of Calligraphy Tool"
-msgstr "Inställning av kalligrafiverktygets pensel"
+msgstr "Pensel-inställning för kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:55 c4458d3c183545989a8408211887163d
 msgid "The setting :guilabel:`Brush` creates slightly rounded and uneven strokes."
@@ -141,32 +141,32 @@ msgstr "Inställningen :guilabel:`Pensel` skapar lätt rundade och ojämna strec
 
 #: ../../source/calligraphy-tool.rst:57 4b476562352e456796c41a89198a5c1b
 msgid "Wiggly setting of Calligraphy Tool"
-msgstr "Wiggly-inställning av kalligrafiverktyg"
+msgstr "Vågig-inställning av kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:61 0f8f2b9cfd12497f867fca467b8eed4d
 msgid "The :guilabel:`Wiggly` setting allows you to draw very organic shapes."
-msgstr "Med inställningen :guilabel:`Wiggly` kan du rita mycket organiska former."
+msgstr "Med inställningen :guilabel:`Vågig` kan du rita mycket organiska former."
 
 #: ../../source/calligraphy-tool.rst:63 d586c476a76d47cba7238af28f5a5409
 msgid "Splotchy setting of Calligraphy Tool"
-msgstr "Fläckig inställning av kalligrafiverktyg"
+msgstr "Kladdig-inställning för kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:67 e1e55c2f28984f699af22a5810b30fa7
 msgid "When set to :guilabel:`Splotchy`, the result looks a bit like calligraphy."
 msgstr ""
-"När den är inställd på :guilabel:`Splotchy` ser resultatet ut lite som "
+"När den är inställd på :guilabel:`Kladdig` ser resultatet ut lite som "
 "kalligrafi."
 
 #: ../../source/calligraphy-tool.rst:69 80ed0dd11e16473b81e0f863d62087cf
 msgid "Tracing setting of Calligraphy Tool"
-msgstr "Kalligrafiverktygets spårningsinställning"
+msgstr "Kalkering-inställning för kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:73 92f3434d28cc48179acc455b8bad33e5
 msgid ""
 "With the calligraphy tool setting :guilabel:`Tracing`, drawings that look like "
 "an old engraving can be created. The image below serves as a model."
 msgstr ""
-"Med kalligrafiverktygets inställning :guilabel:`Spårning` kan man skapa "
+"Med kalligrafiverktygets inställning :guilabel:`Kalkering` kan man skapa "
 "teckningar som ser ut som en gammal gravyr. Bilden nedan fungerar som en modell."
 
 #: ../../source/calligraphy-tool.rst:76 d338ddeb4f034562831c38b8048c1cc5
@@ -176,7 +176,7 @@ msgid ""
 "name of your choice."
 msgstr ""
 "Med knappen till höger, :guilabel:`Lägg till eller redigera kalligrafisk "
-"profil`, kan du spara och ladda de inställningar som gjorts i följande "
+"profil`, kan du spara och läsa in de inställningar som gjorts i följande "
 "alternativ, under ett valfritt penselnamn."
 
 #: ../../source/calligraphy-tool.rst:80 7e88f3b2049a4d78bc4ad689083b1a9b
@@ -202,15 +202,15 @@ msgstr "Ikon för tryckkänslighet"
 #: ../../source/calligraphy-tool.rst:86 6fbf9f9d4f104a298b28e915fd3f4234
 msgid "This option is only useful when a graphics tablet is used for drawing."
 msgstr ""
-"Detta alternativ är endast användbart när en grafikplatta används för att rita."
+"Detta alternativ är endast användbart när en ritplatta används för att rita."
 
 #: ../../source/calligraphy-tool.rst:89 434b44721a39405592ed762e442343cb
 msgid "|Trace lightness icon| Trace lightness"
-msgstr "|Trace lightness icon| Spåra ljushet"
+msgstr "|Trace lightness icon| Kalkera ljushet"
 
 #: ../../source/calligraphy-tool.rst:125 f9101b4ef60b49318bea354177215b43
 msgid "Trace lightness icon"
-msgstr "Ikon för spårets ljushet"
+msgstr "Ikon för kalkeringens ljushet"
 
 #: ../../source/calligraphy-tool.rst:90 1c29e7b7d4e047908fce3fccaebd8347
 msgid "Needs to be active when you want to use the Engraving feature."
@@ -242,7 +242,7 @@ msgstr "Bestämmer hur mycket vinkeln ska ändras när dragriktningen ändras."
 
 #: ../../source/calligraphy-tool.rst:104 9184f37256f440b5bb40fb0aaad338e4
 msgid "Caps"
-msgstr "Caps"
+msgstr "Ändar"
 
 #: ../../source/calligraphy-tool.rst:105 20cd00b46368491a95303dee0ee80493
 msgid "Determines the shape of the brush stroke's ends."
@@ -250,7 +250,7 @@ msgstr "Bestämmer formen på penseldragets ändar."
 
 #: ../../source/calligraphy-tool.rst:107 953147fec62d4df08454c8cd8e30f79c
 msgid "Tremor"
-msgstr "Skakning"
+msgstr "Skaka"
 
 #: ../../source/calligraphy-tool.rst:108 753a1cdbc94b446c8deb7c0737a766cf
 msgid "Adds a little randomness to the brush stroke."
@@ -258,7 +258,7 @@ msgstr "Ger lite slumpmässighet till penseldraget."
 
 #: ../../source/calligraphy-tool.rst:110 87407449929941aabef546d845e300da
 msgid "Wiggle"
-msgstr "Wiggle"
+msgstr "Vicka"
 
 #: ../../source/calligraphy-tool.rst:111 8b36580dc3e8404d985292718b0f8594
 msgid "Adds the unexpected."
@@ -273,7 +273,7 @@ msgid ""
 "Simulates the weight of the tool used, which has an impact on the stroke's "
 "shape."
 msgstr ""
-"Simulerar vikten på det verktyg som används, vilket påverkar slagets form."
+"Simulerar vikten på det verktyg som används, vilket påverkar streckets form."
 
 #: ../../source/calligraphy-tool.rst:117 f264b651f2f04769b6892dd8c98fb9d3
 msgid ""
