--- a/Inkscape/Inkscapes nybörjarguide/import-other-formats.po
+++ b/Inkscape/Inkscapes nybörjarguide/import-other-formats.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-13 20:16+0200\n"
+"PO-Revision-Date: 2025-09-01 17:58+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -55,11 +55,11 @@ msgstr ""
 
 #: ../../source/import-other-formats.rst:12 1a0507dbcaf24cd7b157d99c1b9865ca
 msgid "Commonly available import file formats"
-msgstr "Vanligt förekommande importfilformat"
+msgstr "Vanliga och tillgängliga importfilformat"
 
 #: ../../source/import-other-formats.rst:14 f7e351827d4f40f49163f65072576556
 msgid "(ordered by file extension)"
-msgstr "(sorterad efter filtillägg)"
+msgstr "(sorterade efter filändelse)"
 
 #: ../../source/import-other-formats.rst:16 01f6907d6af94837ab1b2597beb1e2e8
 msgid "Adobe Illustrator 9.0 and above (\\*.ai)"
@@ -139,7 +139,7 @@ msgstr "Corel DRAW 7-13 mallfiler (UC) (\\*.cdt)"
 
 #: ../../source/import-other-formats.rst:46 a5bd75923ca04ca991ac401e841948b7
 msgid "Computer Graphics Metafile files (\\*.cgm)"
-msgstr "Metafiler för datorgrafik (\\*.cgm)"
+msgstr "Computer Graphics Metafile-filer (\\*.cgm)"
 
 #: ../../source/import-other-formats.rst:47 c60f6219042a48c7a29c67074b1e20ab
 msgid "standardized graphics format for vector and raster data"
@@ -173,7 +173,7 @@ msgstr "ACECAD Digimemo Fil (\\*.dhw)"
 
 #: ../../source/import-other-formats.rst:59 f5fba985bc704715a56b145287d62893
 msgid "ACE CAD digital notepad notes file"
-msgstr "ACE CAD digitalt anteckningsblock anteckningar fil"
+msgstr "ACE CAD digital anteckningsfil"
 
 #: ../../source/import-other-formats.rst:61 ff00af040bc14681b8a676fb6ffa5d86
 msgid "Dia Diagram (\\*.dia)"
@@ -193,7 +193,7 @@ msgstr "dxf CAD filformat från AutoCAD, version 13"
 
 #: ../../source/import-other-formats.rst:67 9b0e64a12c0044aeb166f3833adf20df
 msgid "Enhanced Metafiles (\\*.emf)"
-msgstr "Förbättrade metafiler (\\*.emf)"
+msgstr "Enhanced Metafiles (\\*.emf)"
 
 #: ../../source/import-other-formats.rst:68 628e76fcc46148c4861b582a0ee2d58f
 msgid "proprietary Windows vector file format that only supports straight lines"
@@ -201,7 +201,7 @@ msgstr "proprietärt Windows-vektorfilformat som bara stöder raka linjer"
 
 #: ../../source/import-other-formats.rst:70 d64e4761ab9e42e9b6cf94613efb67fb
 msgid "Encapsulated PostScript (\\*.eps)"
-msgstr "Inkapslad PostScript (\\*.eps)"
+msgstr "Encapsulated PostScript (\\*.eps)"
 
 #: ../../source/import-other-formats.rst:71 c556dcb367f44922a7ac38d905e0540b
 msgid "embeddable printer graphics file"
@@ -229,7 +229,7 @@ msgstr ""
 
 #: ../../source/import-other-formats.rst:79 c01429153fc14a218554d5d9552e85a0
 msgid "GIMP Gradient (\\*.ggr)"
-msgstr "Gradient i GIMP (\\*.ggr)"
+msgstr "GIMP-gradient (\\*.ggr)"
 
 #: ../../source/import-other-formats.rst:80 3032520f75bd4421a39322e535ad0f49
 msgid ""
@@ -237,7 +237,7 @@ msgid ""
 "dialog"
 msgstr ""
 "gradientfil från Gimp, gradienten kommer att vara tillgänglig i dialogrutan "
-"Fill and Stroke"
+"Fyllning och streck"
 
 #: ../../source/import-other-formats.rst:82 b734f8d58e6f4defb906b1951328c975
 msgid "HP Graphics Language file (\\*.hpgl)"
@@ -247,7 +247,7 @@ msgstr "HP Graphics Language-fil (\\*.hpgl)"
 #: ../../source/import-other-formats.rst:128 b3c727a36af1459b88afba1f055c0064
 #: e5c8ef67f7364db1be9c5257f3476870
 msgid "plotter file format"
-msgstr "plotterns filformat"
+msgstr "plotterfilformat"
 
 #: ../../source/import-other-formats.rst:85 99972bbeb3eb4e85a89a64653d179ba7
 msgid "icns (\\*.icns)"
@@ -255,7 +255,7 @@ msgstr "icns (\\*.icns)"
 
 #: ../../source/import-other-formats.rst:86 53229860f62a4dada565fb75ea0b898f
 msgid "Apple icon image file format"
-msgstr "Apple ikon bildfilformat"
+msgstr "Apple-ikonbildfilformat"
 
 #: ../../source/import-other-formats.rst:88 ec7ec75b7c8a40c3af7b7f40e744ff93
 msgid "ico (\\*.ico)"
@@ -263,7 +263,7 @@ msgstr "ico (\\*.ico)"
 
 #: ../../source/import-other-formats.rst:89 194e4cd8c58143e688fcf55ece11d370
 msgid "Windows computer icon file format"
-msgstr "Windows datorikon filformat"
+msgstr "Windows datorikonfilformat"
 
 #: ../../source/import-other-formats.rst:91 c508df4389714552b0463aa0ba86a185
 msgid "jpeg2000 (\\*.j2k)"
@@ -356,7 +356,7 @@ msgstr "standardiserat filformat för dokumentutbyte"
 
 #: ../../source/import-other-formats.rst:127 e2281ad776244729b9a1f9d6f9bfb6aa
 msgid "HP Graphics Language Plot file [AutoCAD] (\\*.plt)"
-msgstr "HP:s grafiska språk Plotfil [AutoCAD] (\\*.plt)"
+msgstr "HP Graphics Language Plot-fil [AutoCAD] (\\*.plt)"
 
 #: ../../source/import-other-formats.rst:130 2a1304bc848d45d7843fb1534556e1f8
 msgid "png (\\*.png)"
@@ -388,7 +388,7 @@ msgstr "PostScript (\\*.ps)"
 
 #: ../../source/import-other-formats.rst:140 00a2d56afa0e4adeaa71c6ecd99eaca4
 msgid "printer graphics language file format"
-msgstr "skrivare grafik språk filformat"
+msgstr "filformat för skrivargrafikspråk"
 
 #: ../../source/import-other-formats.rst:142 f34e99e0f0d4452f872611cc9378810e
 msgid "qtif (\\*.qif)"
@@ -404,7 +404,7 @@ msgstr "qtif (\\*.qtif)"
 
 #: ../../source/import-other-formats.rst:146 57a5f67408e447718266460e8995ac60
 msgid "Quick Time image file format"
-msgstr "Quick Time bildfilformat"
+msgstr "Quick Time-bildfilformat"
 
 #: ../../source/import-other-formats.rst:148 e91ba75f80bd4667b3317ab0da6cd17e
 msgid "ras (\\*.ras)"
@@ -416,7 +416,7 @@ msgstr "Sun (Solaris) rasterfilformat"
 
 #: ../../source/import-other-formats.rst:151 b2579491ce1f4c238aeacef9b0c3582f
 msgid "Scalable Vector Graphic (\\*.svg)"
-msgstr "Skalbar vektorgrafik (\\*.svg)"
+msgstr "Scalable Vector Graphic (\\*.svg)"
 
 #: ../../source/import-other-formats.rst:152 5aa8c0d13fbf436dbd0758523c8cbbc6
 msgid "SVG files, such as the files Inkscape generates"
@@ -428,7 +428,7 @@ msgstr "Komprimerad Inkscape SVG (\\*.svgz)"
 
 #: ../../source/import-other-formats.rst:155 512ecfa2f4db4e5cb302c22ea1140251
 msgid "gzip-compressed SVG file with all editor data"
-msgstr "gzip-komprimerad SVG-fil med all redaktörsdata"
+msgstr "gzip-komprimerad SVG-fil med all redigerardata"
 
 #: ../../source/import-other-formats.rst:157 515728f916ee43ffb8999acded51bb91
 msgid "tga (\\*.targa)"
@@ -444,7 +444,7 @@ msgstr "tga (\\*.tga)"
 
 #: ../../source/import-other-formats.rst:161 5027ac270ff74f05972b6013f6d28f42
 msgid "Truevision Advanced Raster Graphics Array image file"
-msgstr "Truevision Advanced Raster Graphics Array bildfil"
+msgstr "Truevision Advanced Raster Graphics Array-bildfil"
 
 #: ../../source/import-other-formats.rst:163 275e0caf4f2a461daa6d782f74c8f680
 msgid "tiff (\\*.tif)"
