--- a/Inkscape/Inkscapes nybörjarguide/sample-chapter.po
+++ b/Inkscape/Inkscapes nybörjarguide/sample-chapter.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:43+0200\n"
+"PO-Revision-Date: 2025-09-01 17:52+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -208,7 +208,7 @@ msgstr ""
 
 #: ../../source/sample-chapter.rst:247 e6a92ef5d153424fb74d9cb6c623babb
 msgid "Icon for Selector tool"
-msgstr "Ikon för Selector-verktyget"
+msgstr "Ikon för Väljare-verktyget"
 
 #: ../../source/sample-chapter.rst:69 b7798f0e7b7d47dcb0af3be5a55fa03c
 msgid ""
@@ -456,11 +456,11 @@ msgid ""
 "or :term:`path <Path>` (if you want to change the spelling, e.g. for "
 "plural, or to not use capitalization)."
 msgstr ""
-"Att hänvisa till **termer** i :doc:`glossary <glossary>` är ett bra sätt "
-"att hjälpa användare att snabbt få tillgång till den hjälp de behöver, "
-"t.ex. kan du använda :term:`Path`: (om du vill behålla den exakta "
-"stavningen) eller :term:`path <Path>` (om du vill ändra stavningen, "
-"t.ex. för plural, eller inte använda versaler)."
+"Att hänvisa till **termer** i :doc:`ordlistan <glossary>` är ett bra "
+"sätt att hjälpa användare att snabbt få tillgång till den hjälp de "
+"behöver, t.ex. kan du använda :term:`Path`: (om du vill behålla den "
+"exakta stavningen) eller :term:`slinga <Path>` (om du vill ändra "
+"stavningen, t.ex. för plural, eller inte använda versaler)."
 
 #: ../../source/sample-chapter.rst:206 45c2de15984c47279f5fd855500136cf
 msgid "In case you ever want to put in a longer **code block**:"
@@ -480,7 +480,7 @@ msgstr ""
 
 #: ../../source/sample-chapter.rst:222 fa0af6065a2e40e582da03b0c93adaa6
 msgid "En dash: –"
-msgstr "En streck: –"
+msgstr "Ett streck: –"
 
 #: ../../source/sample-chapter.rst:224 49cb95297ef643838202857db78361ae
 msgid "Em dash: —"
@@ -488,7 +488,7 @@ msgstr "Em-streck: —"
 
 #: ../../source/sample-chapter.rst:226 ebfa18e71c33464d9b0990aff15a5ded
 msgid "Ellipsis: …"
-msgstr "Ellipsis: …"
+msgstr "Ellips: …"
 
 #: ../../source/sample-chapter.rst:230 d5fc97241fe74f6984039f69a8ad29c3
 msgid ""
@@ -501,15 +501,16 @@ msgstr ""
 "Vi har aktiverat *inline-formatering* för att ta hänsyn till "
 "skriftsystem utan mellanslag (t.ex. kinesiska, japanska och koreanska "
 "system), så tänk på att vissa tecken måste undantas, nämligen "
-"understrykningstecken (``_``), asterisker (``*``) och piptecken (``|``). "
-"Om du t.ex. vill använda en bokstavlig asterisk i matematiska ekvationer:"
+"understrykningstecken (``_``), asterisker (``*``) och pipe-tecken (``|"
+"``). Om du t.ex. vill använda en bokstavlig asterisk i matematiska "
+"ekvationer:"
 
 #: ../../source/sample-chapter.rst:232 617fcc37cbfa4123a3829926eb486a89
 msgid ""
 "In the Align and Distribute dialog, there are 2 rows with 6 alignment "
 "options in a row, which makes 6\\*2=12 alignment options in total."
 msgstr ""
-"I dialogrutan Align and Distribute finns det 2 rader med 6 "
+"I dialogrutan Justera och distribuera finns det 2 rader med 6 "
 "justeringsalternativ i varje rad, vilket innebär att det finns totalt "
 "6\\*2=12 justeringsalternativ."
 
