--- a/Inkscape/Inkscapes nybörjarguide/squares-and-rectangles.po
+++ b/Inkscape/Inkscapes nybörjarguide/squares-and-rectangles.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 18:42+0200\n"
+"PO-Revision-Date: 2025-09-01 17:39+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -103,7 +103,7 @@ msgstr ""
 
 #: ../../source/squares-and-rectangles.rst:36 a02acb2c9bec467a8700cc133191854e
 msgid "Moving the circle handles rounds the corners."
-msgstr "Genom att flytta cirkelns handtag rundas hörnen."
+msgstr "Genom att flytta cirkelhandtagen rundas hörnen."
 
 #: ../../source/squares-and-rectangles.rst:40 03139b7943414382b26158cb5321112c
 msgid ""
@@ -140,7 +140,7 @@ msgstr ""
 
 #: ../../source/squares-and-rectangles.rst:70 01c9010451bf4ddd866b610c1397b45c
 msgid "Rectangle Tool sharp corners"
-msgstr "Rektangelverktyg vassa hörn"
+msgstr "Rektangelverktyg med vassa hörn"
 
 #: ../../source/squares-and-rectangles.rst:53 e7aa93972e2b487e800d48b1eee35d7a
 msgid ""
@@ -152,7 +152,7 @@ msgstr ""
 
 #: ../../source/squares-and-rectangles.rst:56 250638b0eda6475aba37b3e2c8420417
 msgid "the field labelled :guilabel:`W` is for the width;"
-msgstr "fältet som är märkt :guilabel:`W` är för bredden;"
+msgstr "fältet som är märkt :guilabel:`B` är för bredden;"
 
 #: ../../source/squares-and-rectangles.rst:57 1a29115feb68408096d16779904ee75d
 msgid "the field labelled :guilabel:`H` is for the height;"
